<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ExtraTranslation">

    <!-- Main Strings -->
    <string name="app_name" translatable="false">YodoRocket</string>
    <string name="text.desc" translatable="false">Desc</string>
    <string name="text.register">REGISTER</string>
    <string name="text.loading">Loading</string>
    <string name="text.ok">OK</string>
    <string name="text.cancel">Cancel</string>
    <string name="text.version">Version:</string>

    <!-- Registration Messages -->
    <string name="text.register.hint">Enter your activation code. You must be registered as a merchant prior to activation.</string>
    <string name="text.register.contact">Contact: support@ayodo.org</string>
    <string name="text.pos.code.hint">Activation Code</string>
    <string name="text.already.registered">Already registered? Restart</string>

    <!-- Navigation Messages -->
    <string name="text.title.options">Options</string>
    <string name="text.title.tools">Tools</string>
    <string name="text.option.currency">Currency</string>
    <string name="text.option.discount">Discount</string>
    <string name="text.option.settings">Settings</string>
    <string name="text.tool.balance">Balance</string>
    <string name="text.tool.about">About Yodo</string>
    <string name="text.tool.logout">Logout</string>

    <!-- General Messages -->
    <string name="text.pip.hint">Merch Identity Phrase (MIP)</string>
    <string name="text.scanner">Scan the code</string>
    <string name="text.enable.gps">GPS is not enabled. Do you want to go to settings menu?</string>

    <!-- Values Labels -->
    <string name="text.total">Purchase: </string>
    <string name="text.cash.tender">Cash Tender: </string>
    <string name="text.cash.back">Cash Back: </string>
    <string name="text.balance">Balance: </string>
    <string name="text.zero">0.00</string>
    <string name="text.no.item">- no item -</string>

    <!-- About Messages -->
    <string name="text.send.mail">Send Email</string>
    <string name="text.about.email" translatable="false">support@ayodo.org</string>
    <string name="text.about.message">Please use the email below to contact us. We\'ll do everything we can to respond to you as quickly as possible. Please be assured, we will never sell or distribute the personal information you provide to us.</string>

    <!-- Exchange Response -->
    <string name="exchange_code">Code:</string>
    <string name="exchange_auth">Authorization Number:</string>
    <string name="exchange_message">Message:</string>
    <string name="exchange_balance">Balance:</string>
    <string name="exchange_extra">Extra:</string>
    <string name="exchange_error">Invalid SKS size. The client may need to update the YodoPayment application.</string>
    <string name="transaction_error">The transaction is not supported yet.</string>

    <!-- Balance Messages -->
    <string name="text.balance.title">Merchant Balance Report</string>
    <string name="text.balance.cash">Yodo Cash</string>
    <string name="text.balance.debits">Yodo Debits</string>
    <string name="text.balance.today">today:</string>
    <string name="text.balance.to.date">to date:</string>
    <string name="text.balance.cumulative.total">Cumulative Balance:</string>
    <string name="text.balance.cumulative.today">Today\'s Balance:</string>

    <!-- Supported scanners -->
    <string name="text.scanner.hardware">Barcode Scanner</string>
    <string name="text.scanner.software_front">Camera Front</string>
    <string name="text.scanner.software_back">Camera Back</string>

    <!-- Labels -->
    <string name="text.imei">IMEI:</string>
    <string name="text.currency">Currency:</string>
    <string name="text.server">Switch:</string>

    <!-- Activity titles -->
    <string name="title.activity.settings">Yodo Settings</string>
    <string name="title.activity.registration">Yodo Registration</string>

    <!-- configuration options -->
    <string name="text.settings.category.payments">Payment Types</string>
    <string name="text.settings.category.gui">Interface</string>
    <string name="text.settings.category.printer">Printer</string>

    <string name="text.settings.payments.cash">Cash</string>
    <string name="text.settings.languages">Languages</string>
    <string name="text.settings.currency">Currency</string>
    <string name="text.settings.advertising">Promotion Service</string>
    <string name="text.settings.portrait">Portrait Mode</string>
    <string name="text.settings.background">Background Color</string>
    <string name="text.settings.username">Y-Beacon Name</string>
    <string name="text.settings.location">Location Service</string>
    <string name="text.settings.reset">Reset</string>
    <string name="text.settings.receipts.yodo">Yodo Receipts</string>
    <string name="text.settings.receipts.static">Static Receipts</string>
    <string name="text.settings.receipts.cash">Cash Receipts</string>

    <string name="text.settings.summary.advertising">Send promotions to nearby clients</string>
    <string name="text.settings.summary.location">Send the location of transactions</string>
    <string name="text.settings.summary.portrait">Sets the layout to portrait mode</string>
    <string name="text.settings.summary.reset">Clears all the configurations</string>

    <string name="text.settings.reset.confirmation">Are you sure you want to reset the configurations?</string>

    <!-- Messages for the permissions -->
    <string name="text.permission.read.phone.state">Permission required to identify the device in order to access Yodo\'s cloud service</string>
    <string name="text.permission.location">Permission required to use Location services so fare transactions can be geo-tagged</string>
    <string name="text.permission.camera">Permission required to use the camera in order to capture payment credentials</string>
    <string name="text.permission.write.external.storage">Permission required for the secondary screen and currencies</string>

    <!-- ACRA -->
    <string name="text.crash.toast">Ooooops! I crashed, but a report has been sent to my developer to help fix the issue!</string>

    <!-- Error Messages -->
    <string name="error.unknown">This is embarrassing! An error occurred in the process</string>
    <string name="error.play.services">Google Play Services must be installed</string>
    <string name="error.required.field">Required field</string>
    <string name="error.incorrect.code">The code is not valid</string>
    <string name="error.currency">Currency not supported</string>
    <string name="error.mip">Incorrect MIP</string>
    <string name="error.balance">Sorry, seems that you don\'t have a balance</string>
    <string name="error.sks">SKS not supported</string>
    <string name="error.gps.support">Sorry, you don\'t have support for the location service</string>
    <string name="error.hardware">You must turn on your bluetooth first</string>
    <string name="error.camera">This camera doesn\'t exist</string>
    <string name="error.supported">This device is not supported</string>
    <string name="error.20">Error while creating new resource. Probably the Yodo account is also registered as a secondary client</string>
    <string name="error.21">Error while checking information</string>
    <string name="error.no.item">--item--</string>
    <string name="error.payment">Please insert the purchase value first</string>

    <!-- Sunmi Error Messages -->
    <string name="error.sunmi.file">No file!</string>

    <!-- Network Error Messages -->
    <string name="error.network">Sorry, seems that you don\'t have an Internet connection right now</string>
    <string name="error.server">Sorry, the server responded with an error. Try again later</string>

    <!-- Quick Keys -->
    <string name="coins_0"     translatable="false">00</string>
    <string name="coins_5"     translatable="false">5</string>
    <string name="coins_10"    translatable="false">10</string>
    <string name="coins_20"    translatable="false">20</string>
    <string name="coins_50"    translatable="false">50</string>
    <string name="coins_100"   translatable="false">100</string>
    <string name="coins_200"   translatable="false">200</string>
    <string name="coins_500"   translatable="false">500</string>
    <string name="coins_1000"  translatable="false">1000</string>
    <string name="coins_3000"  translatable="false">3000</string>
    <string name="coins_5000"  translatable="false">5000</string>
    <string name="coins_10000" translatable="false">10000</string>

    <!-- Input Labels -->
    <string name="clear"     translatable="false">C</string>
    <string name="value_7"   translatable="false">7</string>
    <string name="value_8"   translatable="false">8</string>
    <string name="value_9"   translatable="false">9</string>
    <string name="value_4"   translatable="false">4</string>
    <string name="value_5"   translatable="false">5</string>
    <string name="value_6"   translatable="false">6</string>
    <string name="value_1"   translatable="false">1</string>
    <string name="value_2"   translatable="false">2</string>
    <string name="value_3"   translatable="false">3</string>
    <string name="value_0"   translatable="false">0</string>
    <string name="value_00"  translatable="false">00</string>
    <string name="value_."   translatable="false">.</string>

    <!-- Languages -->
    <string-array name="languages_array">
        <item>English</item>
        <item>Spanish</item>
        <item>Chinese</item>
        <!--<item>Russian</item>-->
    </string-array>

    <string-array name="languages_array_values" translatable="false">
        <item>en</item>
        <item>es</item>
        <item>zh</item>
        <item>ru</item>
    </string-array>

    <!-- Currency -->
    <string-array name="currency_array" translatable="false">
        <item>MXN</item>
        <item>CAD</item>
        <item>USD</item>
        <item>JPY</item>
        <item>BRL</item>
        <item>CNY</item>
        <item>INR</item>
        <item>EUR</item>
        <item>PHP</item>
        <item>RUB</item>
        <item>UAH</item>
        <item>PEN</item>
    </string-array>

    <!-- Currency Icon -->
    <string-array name="currency_icon_array" translatable="false">
        <item>mexico</item>
        <item>canada</item>
        <item>usa</item>
        <item>japan</item>
        <item>brazil</item>
        <item>china</item>
        <item>india</item>
        <item>euro</item>
        <item>philippine</item>
        <item>russian</item>
        <item>ukraine</item>
        <item>peru</item>
    </string-array>

</resources>
