<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:baselineAligned="false"
    android:clickable="true"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="2">

    <!-- Information Layout -->
    <LinearLayout
        style="@style/RocketLayout"
        android:orientation="vertical" >

        <!-- Top Information -->
        <LinearLayout
            style="@style/RocketLayout"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/data_horizontal_margin"
                android:layout_marginRight="@dimen/data_horizontal_margin"
                android:layout_marginTop="@dimen/data_vertical_margin"
                android:layout_marginBottom="@dimen/data_vertical_margin"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <!-- Labels -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        style="@style/LabelTextView"
                        android:textStyle="bold|italic"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/text.total"/>

                    <TextView
                        style="@style/LabelTextView"
                        android:text="@string/text.cash.tender" />

                    <TextView
                        style="@style/LabelTextView"
                        android:text="@string/text.cash.back"/>

                </LinearLayout>
                <!-- end Labels -->

                <!-- Text Fields -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        style="@style/EditTextView"
                        android:id="@+id/tvTotal"
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceLarge"/>

                    <TextView
                        style="@style/EditTextView"
                        android:id="@+id/tvCashtender"
                        android:drawableLeft="@mipmap/canada"
                        android:drawableStart="@mipmap/canada"/>

                    <TextView
                        style="@style/EditTextView"
                        android:id="@+id/tvCashback"/>

                </LinearLayout>
                <!-- end Text Fields -->

            </LinearLayout>

            <View style="@style/SeparatorRocketTheme"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold|italic"
                    android:text="@string/text.balance"
                    android:textSize="@dimen/text_size_values"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <ProgressBar
                    style="?android:attr/progressBarStyleSmall"
                    android:id="@+id/pgBalance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/tvBalance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:textSize="@dimen/text_size_values"
                    android:visibility="gone"/>

            </LinearLayout>

        </LinearLayout>

        <!-- Bottom options -->
        <LinearLayout
            style="@style/RocketLayout"
            android:layout_weight="2"
            android:weightSum="2"
            tools:ignore="InefficientWeight">

            <ImageView
                style="@style/RocketOptionImageButton"
                android:background="@drawable/bg_highlight_field"
                android:contentDescription="@string/text.desc"
                android:src="@drawable/ic_back"
                android:onClick="back"/>

            <ImageView
                android:id="@+id/ivYodoGear"
                style="@style/RocketOptionImageButton"
                android:contentDescription="@string/text.desc"
                android:src="@drawable/ic_gear"
                android:onClick="makePayment"/>

        </LinearLayout>

    </LinearLayout>
    <!-- End Information Layout -->

    <!-- Preview Camera Layout -->
    <RelativeLayout
        android:id="@+id/previewPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_weight="1"
        android:visibility="gone"/>

    <!-- End Preview Camera Layout -->

    <!-- Operations Layout -->
    <TableRow
        android:id="@+id/trOperationsPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:visibility="visible"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/bg_green"
            android:orientation="vertical">

            <Button
                style="@style/StaticValueButton"
                android:id="@+id/b0000"
                android:text="@string/coins_0"/>

            <Button
                style="@style/StaticValueButton"
                android:id="@+id/b1000"
                android:text="@string/coins_10"/>

            <Button
                style="@style/StaticValueButton"
                android:id="@+id/b2000"
                android:text="@string/coins_20" />

            <Button
                style="@style/StaticValueButton"
                android:id="@+id/b5000"
                android:text="@string/coins_50"/>

            <Button
                style="@style/StaticValueButton"
                android:id="@+id/b10000"
                android:text="@string/coins_100"/>

            <Button
                style="@style/StaticValueButton"
                android:id="@+id/b20000"
                android:text="@string/coins_200"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/nivCompanyLogo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:scaleType="fitCenter"
                android:contentDescription="@string/text.desc"
                android:onClick="purchaseToTender"
                android:src="@mipmap/ic_no_image" />

            <ImageView
                style="@style/ImageButton"
                android:id="@+id/resetButton"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center"
                android:contentDescription="@string/text.desc"
                android:src="@drawable/ic_refresh_black"
                android:onClick="reset"/>

            <LinearLayout
                style="@style/RocketLayout"
                android:paddingTop="@dimen/padding_calc"
                android:paddingBottom="@dimen/padding_calc"
                android:background="@color/gray"
                android:orientation="vertical">

                <!-- line 1 -->
                <LinearLayout style="@style/CalcLayout">

                    <Button
                        style="@style/CalcButton"
                        android:id="@+id/b7"
                        android:text="@string/value_7"/>

                    <Button
                        style="@style/CalcButton"
                        android:id="@+id/b8"
                        android:text="@string/value_8"/>

                    <Button
                        style="@style/CalcButton"
                        android:id="@+id/b9"
                        android:text="@string/value_9"/>

                </LinearLayout>

                <!-- line 2 -->
                <LinearLayout style="@style/CalcLayout">

                    <Button
                        style="@style/CalcButton"
                        android:id="@+id/b4"
                        android:text="@string/value_4"/>

                    <Button
                        style="@style/CalcButton"
                        android:id="@+id/b5"
                        android:text="@string/value_5"/>

                    <Button
                        style="@style/CalcButton"
                        android:id="@+id/b6"
                        android:text="@string/value_6"/>

                </LinearLayout>

                <!-- line 3 -->
                <LinearLayout style="@style/CalcLayout">

                    <Button
                        style="@style/CalcButton"
                        android:id="@+id/b1"
                        android:text="@string/value_1"/>

                    <Button
                        style="@style/CalcButton"
                        android:id="@+id/b2"
                        android:text="@string/value_2"/>

                    <Button
                        style="@style/CalcButton"
                        android:id="@+id/b3"
                        android:text="@string/value_3"/>

                </LinearLayout>

                <!-- line 4 -->
                <LinearLayout style="@style/CalcLayout">

                    <Button
                        style="@style/CalcButton"
                        android:id="@+id/b0"
                        android:text="@string/value_0"/>

                    <Button
                        style="@style/CalcButton"
                        android:id="@+id/b00"
                        android:text="@string/value_00"
                        android:textSize="@dimen/text_size_numbers_00"/>

                    <Button
                        style="@style/CalcButton"
                        android:id="@+id/bDot"
                        android:text="@string/value_."/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </TableRow>

</LinearLayout>
